Implemented Show, Update, and Delete Forecasts
